--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Todo App</title>
 
-    <link rel="manifest" href="/manifest.json" />
+    <!-- PWA Manifest -->
+<link rel="manifest" href="/manifest.json" />
 
     <!-- Icons (only the ones you actually have) -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
@@ -15,8 +15,6 @@
 
     <!-- Theme Color -->
     <meta name="theme-color" content="#000000" />
-
-
   </head>
   <body>
     <div id="root"></div>
