--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Todo App</title>
+    <title>My Todo App</title>
 
     <!-- PWA Manifest -->
-<link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
 
-    <!-- Icons (only the ones you actually have) -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
+    <!-- Icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/icon-192.PNG" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.PNG" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/icon-512.png" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
     <!-- Theme Color -->
